--- a/.github/workflows/threejobs.yml
+++ b/.github/workflows/threejobs.yml
@@ -51,7 +51,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echao Hello, world!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
